<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextSwitch">

    <TextView
        android:id="@+id/txtswitchtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/text_switcher"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextSwitcher
        android:id="@+id/txtswitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnPrev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_weight="1"/>
        <Button
          android:id="@+id/btnNext"
          android:layout_width="0dp"
            android:layout_height="wrap_content"
          android:text="@string/next"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>